--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
-  <body onkeypress="checkKey(event);">
+  <body onkeydown="checkKey(event);">
 <div id="app"></div>
 <div id="event"></div>
 <input id="output" width='200' value="0" readonly placeholder="-1"></input>
@@ -76,7 +76,7 @@
       <button id="dot" onclick="addDot('.');">.</button>
     </td>
     <td>
-      <button id="del" onclick="del();">⌫</button>
+      <button id="delete" onclick="del();">⌫</button>
     </td>
     <td>
       <button id="equal" onclick="equal();">=</button>
@@ -185,7 +185,7 @@ function checkKey(event) {
       document.getElementById("dot").click();
       break;
     case "Backspace":
-      document.getElementById("del").click();
+      document.getElementById("delete").click();
       break;
     case "Enter":
     case "=":
