--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </tr>
 </table>
 </div>
+<button class="add-button">Add to home screen</button><br>
 <script>
 // Write Javascript code!
 const appDiv = document.getElementById('app');
@@ -373,6 +374,36 @@ async function wait(n) {
    // console.log(i);
   //}
 }
+let deferredPrompt;
+const addBtn = document.querySelector('.add-button');
+addBtn.style.display = 'none';
+addBtn.style.height = '0vw'
+addBtn.style.margin = '0vw';
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  // Prevent Chrome 67 and earlier from automatically showing the prompt
+  e.preventDefault();
+  // Stash the event so it can be triggered later.
+  deferredPrompt = e;
+  // Update UI to notify the user they can add to home screen
+  addBtn.style.display = 'block';
+
+  addBtn.addEventListener('click', (e) => {
+    // hide our user interface that shows our A2HS button
+    addBtn.style.display = 'none';
+    // Show the prompt
+    deferredPrompt.prompt();
+    // Wait for the user to respond to the prompt
+    deferredPrompt.userChoice.then((choiceResult) => {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('User accepted the A2HS prompt');
+        } else {
+          console.log('User dismissed the A2HS prompt');
+        }
+        deferredPrompt = null;
+      });
+  });
+});
 </script>
 
 
