--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@ function checkKey(event) {
       document.getElementById("times").click();
       document.getElementById("times").focus();
       setTimeout(document.getElementById("times").blur,500);
+      break;
+    case "R":
+    case "r":
+      location.reload();
   }
 }
 
