--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body onkeydown="checkKey(event);" onkeyup="document.activeElement.blur();">
-	<button class="theme-toggle" onclick="switch_style();"></button>
 		<div id="app"></div>
 		<div id="event"></div>
 		<div id="main-calc">
@@ -96,7 +95,8 @@
 		<script>
 			// Write Javascript code!
 const appDiv = document.getElementById('app');
-appDiv.innerHTML = `<h1 onclick="document.documentElement.requestFullscreen();" id="header">Calculator</h1>`;
+appDiv.innerHTML = `<h1 onclick="document.documentElement.requestFullscreen();" id="header">Calculator<button class="theme-toggle" onclick="switch_style();" onmouseup="document.activeElement.blur();"></button></h1>	
+`;
 //const key = event.key
 var _equal = false
 var operator = 0;
@@ -236,7 +236,6 @@ function checkKey(event) {
     case "*":
       document.getElementById("times").click();
       document.getElementById("times").focus();
-  //    setTimeout(document.getElementById("times").blur,500);
       break;
     case "R":
     case "r":
