dark mode complete! now i need material design icons

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<script>
 			// Write Javascript code!
 const appDiv = document.getElementById('app');
-appDiv.innerHTML = `<h1 onclick="document.documentElement.requestFullscreen();" id="header">Calculator<button class="theme-toggle" onclick="switch_style();" onmouseup="document.activeElement.blur();"></button></h1>	
+appDiv.innerHTML = `<h1 id="header">Calculator<button class="theme-toggle" onclick="switch_style();" onmouseup="document.activeElement.blur();"></button></h1>	
 `;
 //const key = event.key
 var _equal = false
