i have no idea why its not working someone please help

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="height=device-height, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="light.css" id="theme">
+	<link rel="stylesheet" type="text/css" href="https://realdonutking123.github.io/calculator-thing/light.css" id="theme">
 	<!--<link rel="alternate stylesheet" type="text/css" href="dark.css" title="dark">-->
 	<link rel="manifest" href="/calculator-thing/manifest.json">
 </head>
@@ -423,11 +423,11 @@ function clipboard() {
 }
 function switch_style() {
     var stylething = document.getElementById("theme");
-    if (stylething.href.match("light.css")) {
-        stylething.href = "dark.css";    
+    if (stylething.href.match("https://realdonutking123.github.io/calculator-thing/light.css")) {
+        stylething.href = "https://realdonutking123.github.io/calculator-thing/da.css";    
     }
     else {
-        stylething.href = "light.css";  
+        stylething.href = "https://realdonutking123.github.io/calculator-thing/light.css";  
     }
 }
 		</script>
