--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ function clipboard() {
 function switch_style() {
     var stylething = document.getElementById("theme");
     if (stylething.href.match("https://realdonutking123.github.io/calculator-thing/light.css")) {
-        stylething.href = "https://realdonutking123.github.io/calculator-thing/da.css";    
+        stylething.href = "https://realdonutking123.github.io/calculator-thing/dark.css";    
     }
     else {
         stylething.href = "https://realdonutking123.github.io/calculator-thing/light.css";  
